Fix size of featured star on mobile
This commit was automatically generated from 2a1c0d92eddeb191f1a07905b95f084d2494679c

--- a/static/style.css
+++ b/static/style.css
@@ -494,7 +494,7 @@ summary h2 {
         padding-left: 0.25rem;
         padding-right: 0.25rem;
     }
-    .stream-item img {
+    .stream-item img:not(.fstar) {
         margin-bottom: 0;
         width: 100%;
         height: 100%;
